🔥 UPDATE: fixed mobile view overflow, ✨ ADD: new words

--- a/src/Components/FlashCard.css
+++ b/src/Components/FlashCard.css
@@ -25,7 +25,7 @@
 
   .card {
     width: 350px;
-    height: 500px;
+    height: 550px;
   }
 
   .card-container {
@@ -75,7 +75,7 @@
 
 
   .card .back {
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 1.4em;
     background-color: black;
     background-size: cover;
